# haskell-pg

./: .ghci  .gitignore  LICENSE  README.md  flake.nix  haskell-pg.cabal  haskell-study.cabal
app/: Main.hs
atcoder/: .gitignore  Makefile  clean.sh  interactive.sh  new.sh  template.hs  test.sh
atcoder/abc465/: Makefile  a.hs  b.hs  c.hs  d.hs
atcoder/abc466/: Makefile  a.hs  b.hs  c.hs  d.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/: Bmi.hs  Factorial.hs  Hello.hs  Squares.hs
