cabal-version: 3.0
name:          haskell-pg
version:       0.1.0.0
build-type:    Simple

common warnings
    ghc-options: -Wall

executable haskell-pg
    import:           warnings
    main-is:          Main.hs
    other-modules:    Bmi
                    , Factorial
                    , Hello
                    , Squares
    build-depends:    base >=4.18 && <4.21
    hs-source-dirs:   app, src
    default-language: Haskell2010
